Typo, correzione spazi fine pagina

--- a/Udbp.tex
+++ b/Udbp.tex
@@ -444,7 +444,7 @@
 			    \item Un lavoratore partecipa a diversi cast
 			    \item Associazione di tipo (N,M) molti a molti
 		    \end{itemize}}
-		  
+		\pagebreak
 		\item {\textbf{Persona-Recensione: \underline{Rilascia}}
 		    \begin{itemize}
 			    \item Ogni Persona può scrivere diverse Recensioni 
@@ -568,7 +568,7 @@
 		\end{itemize}
 	\end{table}
 
-	Il totale degli accessi, essendo l'operazione 2 giornaliera e l'operazione 6 settimanale, si calcola in questo modo: 10000*7 + 28200 = 108200 accessi.\\\\
+	Il totale degli accessi, essendo l'operazione 2 giornaliera e l'operazione 6 settimanale, si calcola in questo modo: 10000*7 + 28200 = 98200 accessi.\\\\
 	In coclusione la ridondanza del dato non porta vantaggi, di conseguenza si e' deciso di eliminarla.
 	\subsection{Ristrutturazione schema ER}
 	\subsubsection{Eliminazione generalizzioni}
