--- a/Udbp.tex
+++ b/Udbp.tex
@@ -749,7 +749,7 @@
 		\item Nella tabella \textbf{Spettacolo} vengono aggiunti molto frequentemente nuove tuple
 		\item La stessa viene consultata spesso per l'orario inizio spettacoli
 		\item La tabella \textbf{Film} contenga molte tuple
-		\item Nella tabella \textbf{Film} non poche volte al mese vengano aggiunti nuovi film
+		\item Nella tabella \textbf{Film} poche volte al mese vengano aggiunti nuovi film
 		\item La stessa viene consultata spesso per il titolo del film
 		\item La tabella \textbf{Persona} contanga molte tuple
 		\item Nella tabella \textbf{Persona} vengono aggiunti spesso nuove tuple
